--- a/NativeSpark/src/main/resources/application.properties
+++ b/NativeSpark/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8082
 
 spring.datasource.url=jdbc:mysql://localhost:3306/nativespark?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=1
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
