--- a/NativeSpark/src/main/resources/application.properties
+++ b/NativeSpark/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # Enable SQL logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -32,5 +34,6 @@ spring.thymeleaf.servlet.content-type=text/html
 
 spring.security.user.name=admin
 spring.security.user.password=admin
+
 
 
